--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@ table {
 }
 
 /* TYPO */
-.content * {
+.content h1,
+.content h2,
+.content h3,
+.content h4,
+.content p,
+.content a,
+.content li {
   max-width: 90%;
 }
 
@@ -181,6 +187,8 @@ table {
 
 .grid-item-big img {
   margin-bottom: 20px;
+  width: 100% !important;
+  height: auto !important;
 }
 
 .grid-item-big p {
@@ -212,8 +220,16 @@ table {
   text-transform: uppercase;
 }
 
+.info-tags {
+  padding-top: 10px;
+}
+
 .info-tags span {
-  display: inline-block;
+  display: block;
+}
+
+.generic-content {
+  padding: 30px 0;
 }
 
 .btn {
@@ -279,13 +295,21 @@ a.btn-secondary img {
 /* STARTUP */
 .startup-item {
   display: block;
-  padding: 20px 0;
-  border-bottom: 1px solid #502882;
   text-decoration: none;
 }
 
-.startup-item:first-child {
-  padding-top: 0;
+.divider {
+  background-color: #502882;
+  height: 1px;
+  border: 0;
+  margin: 20px 0;
+}
+.divider:last-child {
+  opacity: 0;
+  margin-top: 0;
+}
+.divider:first-child {
+  margin-top: 0;
 }
 
 .startup-item h4 {
@@ -312,8 +336,6 @@ a.btn-secondary img {
 .blockquote {
   text-decoration: none;
   display: block;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .blockquote h2 {
@@ -324,11 +346,17 @@ a.btn-secondary img {
 .figure-banner {
   text-decoration: none;
   display: block;
-  padding: 30px 0;
+}
+
+.generic-content td {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .figure-banner > img {
   margin-bottom: 10px;
+  width: 100% !important;
+  height: auto !important;
 }
 
 .figure-banner h1 {
@@ -368,4 +396,9 @@ a.btn-secondary img {
 .pelmel h4 {
   padding: 0.25em 0;
 }
-</style><title>JIC Newsletter</title></head><body> <table class="newsletter"><tr class="show-in-browser"> <td class="content gray-bg"><span><a class="gray-text" href="http://">Zobrazte si newsletter v prohlížeči</a></span></td></tr><tr><td><table class="hero"><tr class="hero-header"><td class="logo"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/jic-logo.png"></td><td class="date content"><span class="caption">květen 2022</span></td></tr><tr><td class="content hero-content layout" colspan="2"><h1>Září patří Velvet Innovation </h1><p class="body-text">Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek</p><h4 class="body-header">Top výběr z newsletteru</h4><ul><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li></ul></td></tr></table></td></tr><tr><td class="layout"><table class="section"><tr class="section-top"><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-magazine.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td colspan="2"><a class="btn" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-all-articles.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-events.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td colspan="2"><a class="btn" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-all-events.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-pelmel.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="pelmel" colspan="2"><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-startup.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="content"><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-advices.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="quote content"><img class="quotes" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/quotes.png"><p class="big">Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět.</p><h3>Petr Chládek</h3><span>Ředitel JIC</span></div></td></tr></table></td></tr></table></td></tr><tr>               <td class="layout"><a class="blockquote" href="http://"> <h2>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</h2><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-learn-more.png"></div></a></td></tr><tr><td class="layout"><a class="figure-banner" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-learn-more.png"></div></a><a class="figure-banner" href="http://"> <div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-learn-more.png"></div></a></td></tr><tr><td class="footer"><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-footer.png"><div class="section-body margin"><p>Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na <a href="http://">marketing@jic.cz</a></p><table class="socials"><tr><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/fb-dark-cutted.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/in-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/ig-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/yt-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/tw-dark.png"></a></td></tr></table></div></td></tr></table></body><a class="unsub violet-text" href="http://">Pro odhlášení z odběru newsletteru klikněte zde</a></html>
+
+.advices .human {
+  width: 100% !important;
+  height: auto !important;
+}
+</style><title>JIC Newsletter</title></head><body> <table class="newsletter"><tr class="show-in-browser"><td class="content.gray-bg"><span><a class="gray-text" href="https://jic.cz" mc:edit>Zobrazte si newsletter v prohlížeči</a></span></td></tr><tr><td><table class="hero"><tr class="hero-header"><td class="logo"><img src="/images/jic-logo.png"></td><td class="date content"><span class="caption" mc:edit>květen 2022</span></td></tr><tr><td class="content hero-content layout" colspan="2"><h1 mc:edit>Září patří Velvet Innovation </h1><p class="body-text" mc:edit>Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek</p><h4 class="body-header" mc:edit>Top výběr z newsletteru</h4><ul><li mc:repeatable>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li></ul></td></tr></table></td></tr><tr><td class="layout"><table class="section"><tr class="section-top"><td><img class="section-header" src="/images/header-magazine.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="https://jic.cz" mc:edit><img src="/images/placeholder.png" mc:edit><div class="content"><span class="tag" mc:edit>jic talk</span><h1 mc:edit>Nadpis lorem ipsum</h1><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr mc:repeatable><td class="grid-item-small"><a href="https://jic.cz"><div class="content"><span class="tag" mc:edit>jic talk</span><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td><td class="grid-item-small" mc:hideable><a href="https://jic.cz"><div class="content"><span class="tag" mc:edit>jic talk</span><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td colspan="2"><a class="btn" href="https://jic.cz"> <img src="/images/btn-all-articles.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="/images/header-events.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="https://jic.cz"><img src="/images/placeholder.png" mc:edit><div class="content"><span class="tag jic talk" mc:edit></span><h1 mc:edit>Nadpis lorem ipsum</h1><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags" mc:edit><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr mc:repeatable><td class="grid-item-small"><a href="https://jic.cz"><div class="content"><span class="tag" mc:edit>jic talk</span><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span mc:edit mc-repeatable>19. 2. 2022, 19 – 21 hod.</span><span mc:edit mc-repeatable>brno-medlánky</span></div></div></a></td><td class="grid-item-small" mc:hideable><a href="https://jic.cz"><div class="content"><span class="tag" mc:edit>jic talk</span><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span mc:edit mc-repeatable>19. 2. 2022, 19 – 21 hod.</span><span mc:edit mc-repeatable>brno-medlánky</span></div></div></a></td></tr><tr><td colspan="2"><a class="btn" href="https://jic.cz"> <img src="/images/btn-all-events.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="/images/header-pelmel.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="pelmel" colspan="2"><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Kiwi se vrací do hry</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Musk koupil Twitter</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Smartlook jde za moře</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Solitea zase nakupuje</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Kiwi se vrací do hry</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Musk koupil Twitter</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Smartlook jde za moře</h4></a><a href="https://jic.cz"> <h4 mc:edit mc:repeatable>Solitea zase nakupuje</h4></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="/images/header-startup.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="content"><div mc:repeatable><a class="startup-item" href="https://jic.cz"><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><hr class="divider"></div><div mc:repeatable><a class="startup-item" href="https://jic.cz"><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><hr class="divider"></div><div mc:repeatable><a class="startup-item" href="https://jic.cz"><h4 mc:edit>Nadpis lorem ipsum</h4><p mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><hr class="divider"></div></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="/images/header-advices.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="advices"><img class="human" src="/images/placeholder.png" mc:edit><div class="quote content"><img class="quotes" src="/images/quotes.png" mc:edit><p class="big" mc:edit>Lorem ipsum (zkráceně lipsum) je označení pro standardní pseudolatinský text užívaný v grafickém designu a navrhování jako demonstrativní výplňový text při vytváření pracovních ukázek grafických návrhů (např. internetových stránek, rozvržení časopisů či všech druhů reklamních materiálů). Lipsum tak pracovně znázorňuje text v ukázkových maketách (tzv. mock-up) předtím, než bude do hotového návrhu vložen smysluplný obsah. </p><h3 mc:edit>Petr Chládek</h3><span mc:edit>Ředitel JIC</span></div></td></tr></table></td></tr></table></td></tr><tr><td class="generic-content"><table><tr mc:hideable>               <td class="layout"><a class="blockquote" href="https://jic.cz"> <h2 mc:edit>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</h2><div class="btn"> <img src="/images/btn-learn-more.png"></div></a></td></tr><tr mc:hideable>               <td class="layout"><a class="figure-banner" href="https://jic.cz"> <div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="/images/btn-learn-more.png"></div></a></td></tr><tr mc:hideable><td class="layout"><a class="figure-banner" href="https://jic.cz"> <img src="/images/placeholder.png"><div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="/images/btn-learn-more.png"></div></a></td></tr></table></td></tr><tr><td class="footer"><img class="section-header" src="/images/header-footer.png"><div class="section-body margin"><p mc:edit>Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na <a href="https://jic.cz">marketing@jic.cz</a></p><table class="socials"><tr><td><a href="https://jic.cz"> <img src="/images/fb-dark-cutted.png"></a></td><td><a href="https://jic.cz"> <img src="/images/in-dark.png"></a></td><td><a href="https://jic.cz"> <img src="/images/ig-dark.png"></a></td><td><a href="https://jic.cz"> <img src="/images/yt-dark.png"></a></td><td><a href="https://jic.cz"> <img src="/images/tw-dark.png"></a></td></tr></table></div></td></tr></table></body><a class="unsub violet-text" href="https://jic.cz" mc:edit>Pro odhlášení z odběru newsletteru klikněte zde</a></html>
