--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         width: 600px;
       }
 
+      table td,
+      table td {
+        vertical-align: top;
+      }
+
+      table.tag tr,
+      table.tag td {
+        vertical-align: middle;
+      }
+
       img {
         height: auto;
         object-fit: contain;
@@ -211,6 +221,10 @@
       }
 
       /* GRID */
+      .grid {
+        border-spacing: 0 40px;
+      }
+
       .grid-item-big,
       .grid-item-small {
       }
@@ -506,9 +520,6 @@
                             </a>
                           </td>
                         </tr>
-                        <tr>
-                          <td class="space" colspan="2"><img class="space xxxl" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/spaces/xxxl.png" width="60" height="60" /></td>
-                        </tr>
                         <tr mc:repeatable>
                           <!---->
                           <!-- Magazine small item-->
@@ -566,9 +577,6 @@
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2"><img class="space xxl" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/spaces/xxl.png" width="40" height="40" /></td>
-                        </tr>
-                        <tr>
                           <td colspan="2">
                             <a class="btn" href="https://www.jic.cz/magazin/"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-all-articles.png" width="142" height="33" /></a>
                           </td>
@@ -614,9 +622,6 @@
                               </div>
                             </a>
                           </td>
-                        </tr>
-                        <tr>
-                          <td colspan="2"><img class="space xxl" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/spaces/xxl.png" width="40" height="40" /></td>
                         </tr>
                         <tr mc:repeatable>
                           <!-- -->
@@ -683,9 +688,6 @@
                               </tr>
                             </table>
                           </td>
-                        </tr>
-                        <tr>
-                          <td><img class="space xxl" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/spaces/xxl.png" width="40" height="40" /></td>
                         </tr>
                         <tr>
                           <td>
